fix: remove large gap between line breaks

--- a/_sass/theme/_aside.scss
+++ b/_sass/theme/_aside.scss
@@ -53,7 +53,6 @@ aside {
 
         ol {
             margin-left: -0.45em;
-            padding-bottom: 1em;
 
             li {
                 display: flex;
