--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -139,6 +139,7 @@ main > section {
 .line-break {
   display: block;
   height: 7em;
+  margin: -2rem 0;
   width: 100%;
 }
 
